--- a/assets/app.css
+++ b/assets/app.css
@@ -49,7 +49,8 @@ html, body {
   border: dotted rgb(39, 143, 0);
   height: auto;
   min-height: 100px;
-  padding: 2px;
+  padding: 6px;
+  overflow: scroll;
 }
 
 .app-screen input {
@@ -84,8 +85,35 @@ html, body {
 #wallets {
   height: 50%;
 }
+
 #contracts {
   height: 50%;
+}
+
+#blocks-wrapper {
+  padding-left: 0px;
+}
+
+#blocks {
+  height: 100%;
+  width: 9999px;
+}
+
+#blocks .block {
+  float: left;
+  height: 100%;
+  width: 250px;
+  margin-left: 4px;
+  border: 2px solid rgb(39, 143, 0);
+  padding: 6px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+#blocks .block > * {
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 #details {
@@ -106,8 +134,10 @@ html, body {
   height: 10%;
 }
 
-#transactions {
+#blocks-wrapper {
   height: 20%;
+  overflow-x: scroll;
+  overflow-y: hidden;
 }
 
 .ethereum-code {
